--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
@@ -5,52 +5,32 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a new interface in a compilation unit</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a new interface in an existing compilation unit</h1>
-
-<p class=para>An alternative way to create a new interface is to add it to an
-existing compilation unit. To do this, </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the Package Explorer view, double-click a compilation unit.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Type the code for the interface at the desired position in the
-compilation unit.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a new interface in an existing compilation unit</h1>
+  <p class=para>An alternative way to create a new interface is to add it to an 
+    existing compilation unit. To do this, </p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the Package Explorer view, double-click a compilation unit.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Type the code for the interface at the desired position in the compilation 
+    unit.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-24.htm">Creating a nested interface</a><br>
-<a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
-<a href="..\tasks\tasks-23.htm">Creating a standalone interface</a><br>
-<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-<a href="tasks-22.htm">Opening the New Interface wizard</a><br>
-<a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-24.htm">Creating a nested interface</a><br>
+    <a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
+    <a href="..\tasks\tasks-23.htm">Creating a standalone interface</a><br>
+    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+    <a href="tasks-22.htm">Opening the New Interface wizard</a><br>
+    <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p class=para>&nbsp;</p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
