--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-38.htm
@@ -5,58 +5,38 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Changing the appearance of the Hierarchy view</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Changing the appearance of the Hierarchy view</h1>
-
-<p class=para>The Type Hierarchy view offers three different ways to look at a
-type hierarchy (use the toolbar buttons to alternate between them):</p>
-
-<ul type=disc>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo3;tab-stops:list .5in'><span class=label><b>Show the
-     Type Hierarchy</b></span> displays the type hierarchy of a type. This view
-     shows all super- and subtypes of the selected type. Type java.lang.<span
-     class=filename>Object</span> is shown in the top-left corner. Interfaces
-     are not shown.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo3;tab-stops:list .5in'><span class=label><b>Show the
-     Supertype Hierarchy</b></span> displays the supertype hierarchy of a type.
-     This view shows all supertypes and the hierarchy of all implemented
-     interfaces. The selected type is always shown in the top-left corner.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo3;tab-stops:list .5in'><span class=label><b>Show the
-     Subtype Hierarchy</b></span> displays the supertype hierarchy of a type.
-     This view shows all subtypes of the selected type and all implementers of
-     the selected interface (if the view is opened on an interface). The
-     selected type is always shown in the top-left corner.</li>
-</ul>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Changing the appearance of the Hierarchy view</h1>
+  <p class=para>The Type Hierarchy view offers three different ways to look at 
+    a type hierarchy (use the toolbar buttons to alternate between them):</p>
+  <ul type=disc>
+    <li class=MsoNormal style='     '><span class=label><b>Show the Type Hierarchy</b></span> 
+      displays the type hierarchy of a type. This view shows all super- and subtypes 
+      of the selected type. Type java.lang.<span
+     class=filename>Object</span> is shown in the top-left corner. Interfaces 
+      are not shown.</li>
+    <li class=MsoNormal style='     '><span class=label><b>Show the Supertype 
+      Hierarchy</b></span> displays the supertype hierarchy of a type. This view 
+      shows all supertypes and the hierarchy of all implemented interfaces. The 
+      selected type is always shown in the top-left corner.</li>
+    <li class=MsoNormal style='     '><span class=label><b>Show the Subtype Hierarchy</b></span> 
+      displays the supertype hierarchy of a type. This view shows all subtypes 
+      of the selected type and all implementers of the selected interface (if 
+      the view is opened on an interface). The selected type is always shown in 
+      the top-left corner.</li>
+  </ul>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-6.htm">Java views</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\delete\tasks-37.htm">Using the Hierarchy view</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-24.htm">Views and editors</a></p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-24.htm">Views and editors</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
