--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
@@ -5,78 +5,50 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Setting the order of import statements</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Setting the order of import statements</h1>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the menu bar, select <b>Window</b> &gt; <b>Preferences</b>.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the left pane, expand the <b>Java</b> category and select <b>Organize
-Imports</b>.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>The Organize Imports page defines the sorting order of import
-statements. In the Imports list, manage the list of package prefixes as
-follows:</p>
-
-<ol start=3 type=1>
- <ul type=circle>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Click <span
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Setting the order of import statements</h1>
+  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the menu bar, select <b>Window</b> &gt; <b>Preferences</b>.</p>
+  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the left pane, expand the <b>Java</b> category and select <b>Organize 
+    Imports</b>.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> The Organize Imports page defines the sorting order of import statements. 
+    In the Imports list, manage the list of package prefixes as follows:</p>
+  <ol start=3 type=1>
+    <ul type=circle>
+      <li class=MsoNormal>Click <span
       class=label><b>Add</b></span> to add a new prefix</li>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Click <span
-      class=label><b>Remove</b></span> to remove the selected prefix from the
-      list</li>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Click the <span
-      class=label><b>Up</b></span> and <span class=label><b>Down</b></span>
-      buttons to rearrange the sequence of the list by moving the selected
-      prefix up or down</li>
- </ul>
-</ol>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Number of qualified imports before
-* is used</b></span> field, type the number of import statements that are
-allowed to refer to the same package before <span class=filename>&lt;package
-prefix&gt;.*</span> is used. This number is called the import threshold.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>OK</b></span> when you are done.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+      <li class=MsoNormal>Click <span
+      class=label><b>Remove</b></span> to remove the selected prefix from the 
+        list</li>
+      <li class=MsoNormal>Click the <span
+      class=label><b>Up</b></span> and <span class=label><b>Down</b></span> buttons 
+        to rearrange the sequence of the list by moving the selected prefix up 
+        or down</li>
+    </ul>
+  </ol>
+  <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Number of qualified imports before * is 
+    used</b></span> field, type the number of import statements that are allowed 
+    to refer to the same package before <span class=filename>&lt;package prefix&gt;.*</span> 
+    is used. This number is called the import threshold.</p>
+  <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>OK</b></span> when you are done.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
-<a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
-<a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
+    <a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
+    <a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
