--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -5,60 +5,39 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Using the local history</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Using the local history</h1>
-
-<p class=para>The JDT extends the workbench concept of local history in three
-ways: </p>
-
-<ul type=disc>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo3;tab-stops:list .5in'>A file can be replaced with
-     an edition from the local history not just in the Navigator but also in
-     the Package Explorer view.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo3;tab-stops:list .5in'>The JDT allows you to replace
-     individual Java elements (types and their members) with editions from the
-     local history.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo3;tab-stops:list .5in'>The JDT allows you to restore
-     Java elements (and files) deleted from the workbench that have been kept
-     in the local history.</li>
-</ul>
-
-<p class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto'>Note:
-Files and Java elements such as types and their members change in time. A &#8216;snapshot&#8217;
-of what they look like at<span style="mso-spacerun: yes">&nbsp; </span>a point
-in time (as saved in the local history) is called an edition. </p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Using the local history</h1>
+  <p class=para>The JDT extends the workbench concept of local history in three 
+    ways: </p>
+  <ul type=disc>
+    <li class=MsoNormal style='     '>A file can be replaced with an edition from 
+      the local history not just in the Navigator but also in the Package Explorer 
+      view.</li>
+    <li class=MsoNormal style='     '>The JDT allows you to replace individual 
+      Java elements (types and their members) with editions from the local history.</li>
+    <li class=MsoNormal style='     '>The JDT allows you to restore Java elements 
+      (and files) deleted from the workbench that have been kept in the local 
+      history.</li>
+  </ul>
+  <p class=MsoNormal>Note: Files and Java elements such as types and their members 
+    change in time. A &#8216;snapshot&#8217; of what they look like at&nbsp; a 
+    point in time (as saved in the local history) is called an edition. </p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="..\concepts\concepts-6.htm">Java views</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-63.htm">Replacing a Java element with a local
-history edition</a><br>
-<a href="..\tasks\tasks-64.htm">Restoring a deleted workbench element</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-63.htm">Replacing a Java element with a local history 
+    edition</a><br>
+    <a href="..\tasks\tasks-64.htm">Restoring a deleted workbench element</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a><br>
-&nbsp;</p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a><br>
+    &nbsp;</p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
