--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -5,86 +5,51 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Replacing a Java element with a local history edition</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Replacing a Java element with a local history edition</h1>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Make sure that a Java view is visible.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Open a Java editor for the Java file in which you want to
-replace a Java element with an edition from the local history.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Activate the editor by clicking its tab in the editor area.
-The Java view also displays the Java file.</p>
-
-<p class=head style='margin-left:.25in'>Note: The Package Explorer view can be
-configured to show or not show Java elements in files. Use <b>Window &gt;
-Preferences &gt; Java &gt; Appearance &gt; Show Members in Package Explorer</b>
-to set you preference.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the element that you want to replace.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the element's pop-up menu, select <span class=label><b>Replace
-With &gt; Element from Local History</b></span>.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the upper pane of the resulting dialog, all available
-editions of the selected element in the local history are displayed.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select an edition in the upper pane to view the differences
-between the selected edition and the edition in the workbench.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>When you have identified the edition with which you want to
-replace the existing Java element, click <span class=label><b>Replace</b>.</span></p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>The local history edition replaces the current one in the
-editor.</p>
-
-<p class=para style='margin-left:.5in'><b>Note:</b> The changed compilation
-unit has not yet been saved at this point.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Replacing a Java element with a local history edition</h1>
+  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Make sure that a Java view is visible.</p>
+  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Open a Java editor for the Java file in which you want to replace 
+    a Java element with an edition from the local history.</p>
+  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Activate the editor by clicking its tab in the editor area. The Java 
+    view also displays the Java file.</p>
+  <p class=head>Note: The Package Explorer view can be configured to show or not 
+    show Java elements in files. Use <b>Window &gt; Preferences &gt; Java &gt; 
+    Appearance &gt; Show Members in Package Explorer</b> to set you preference.</p>
+  <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the element that you want to replace.</p>
+  <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the element's pop-up menu, select <span class=label><b>Replace 
+    With &gt; Element from Local History</b></span>.</p>
+  <p class=head> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the upper pane of the resulting dialog, all available editions 
+    of the selected element in the local history are displayed.</p>
+  <p class=head> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select an edition in the upper pane to view the differences between 
+    the selected edition and the edition in the workbench.</p>
+  <p class=head> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> When you have identified the edition with which you want to replace 
+    the existing Java element, click <span class=label><b>Replace</b>.</span></p>
+  <p class=para> 9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> The local history edition replaces the current one in the editor.</p>
+  <p class=para><b>Note:</b> The changed compilation unit has not yet been saved 
+    at this point.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-6.htm">Java views</a><br>
-<a href="..\concepts\concepts-7.htm">Java editor</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-6.htm">Java views</a><br>
+    <a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-62.htm">Using the local history</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-62.htm">Using the local history</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-102.htm">Outline view for Java</a><br>
-&nbsp;</p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-102.htm">Outline view for Java</a><br>
+    &nbsp;</p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
