--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -5,62 +5,38 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Formatting files or portions of code</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Formatting files or portions of code</h1>
-
-<p class=para>To format Java code:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Use the Code Formatting Preferences page (<b>Window</b> &gt; <b>Preferences</b>
-&gt; <b>Java</b> &gt; <b>Code Formatter</b>) to specify your preferences for code
-formatting. </p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Open a Java file and select the code you want to format. If
-nothing is selected, then all of the editor content is formatted.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Format the code by either</p>
-
-<p class=head style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo2;
-tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><![endif]>Selecting Format from the editor's pop-up menu or</p>
-
-<p class=head style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo2;
-tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><![endif]>Pressing <b>Ctrl+Shift+F</b> or</p>
-
-<p class=head style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo2;
-tab-stops:list 1.0in'><![if !supportLists]><span style='font-family:Symbol'>·<span
-style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><![endif]>Selecting <b>Source &gt; Format</b> from the menu bar.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Formatting files or portions of code</h1>
+  <p class=para>To format Java code:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Use the Code Formatting Preferences page (<b>Window</b> &gt; <b>Preferences</b> 
+    &gt; <b>Java</b> &gt; <b>Code Formatter</b>) to specify your preferences for 
+    code formatting. </p>
+  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Open a Java file and select the code you want to format. If nothing 
+    is selected, then all of the editor content is formatted.</p>
+  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Format the code by either</p>
+  <p class=head> <span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span></span> Selecting Format from the editor's pop-up menu or</p>
+  <p class=head> <span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span></span> Pressing <b>Ctrl+Shift+F</b> or</p>
+  <p class=head> <span style='font-family:Symbol'>·<span
+style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span></span> Selecting <b>Source &gt; Format</b> from the menu bar.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
-<a href="..\concepts\concepts-7.htm">Java editor</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a><br>
+    <a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
-<a href="..\tasks\tasks-68.htm">Setting code formatting preferences</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
+    <a href="..\tasks\tasks-68.htm">Setting code formatting preferences</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
