--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -5,55 +5,34 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Setting code formatting preferences</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Setting code formatting preferences</h1>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the workbench menu bar, select <b>Window</b> &gt; <b>Preferences.
-</b>The Workbench Preferences page opens.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the left pane, expand the <b>Java</b> category and select <b>Code
-Formatter</b>. The Code Formatter Preferences page opens.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>New Lines</b></span>, <span
-class=label><b>Line Splitting, </b>and<b> Style</b></span> tabs, select the
-code formatting conventions that you want the formatter to follow.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Note that at the bottom of the page, you can observe an
-example effect of each individual code formatting option and see a preview of what
-your formatted code will look like.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>OK</b></span> when you are done.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Setting code formatting preferences</h1>
+  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the workbench menu bar, select <b>Window</b> &gt; <b>Preferences. 
+    </b>The Workbench Preferences page opens.</p>
+  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the left pane, expand the <b>Java</b> category and select <b>Code 
+    Formatter</b>. The Code Formatter Preferences page opens.</p>
+  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>New Lines</b></span>, <span
+class=label><b>Line Splitting, </b>and<b> Style</b></span> tabs, select the code 
+    formatting conventions that you want the formatter to follow.</p>
+  <p class=head> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Note that at the bottom of the page, you can observe an example effect 
+    of each individual code formatting option and see a preview of what your formatted 
+    code will look like.</p>
+  <p class=head> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>OK</b></span> when you are done.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
-<a href="..\tasks\tasks-67.htm">Formatting files or portions of code</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-66.htm">Formatting Java code</a><br>
+    <a href="..\tasks\tasks-67.htm">Formatting files or portions of code</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
