--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -4,54 +4,38 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Organizing Java projects</h1>
-
-<p class=para>You can organize Java projects in two different ways. </p>
-
-<ul type=disc>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo1;tab-stops:list .5in'>Use the project as the
-     container of packages. <br>
-     In this organization, all Java packages are created directly inside the
-     project. This is the selected organization by default. The generated CLASS
-     files are stored along with the JAVA source files.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo1;tab-stops:list .5in'>Use source folders as the
-     container for packages. <br>
-     In this project organization, packages are not created directly inside the
-     project but in source folders. You create source folders as children of
-     the project and create your packages inside these source folders. </li>
-</ul>
-
-<p class=para>The default organization for new projects can be changed on the
-preference pages (<b>Window</b> &gt; <b>Preferences</b> &gt; <b>Java &gt; New
-Project</b>).</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Organizing Java projects</h1>
+  <p class=para>You can organize Java projects in two different ways. </p>
+  <ul type=disc>
+    <li class=MsoNormal style='     '>Use the project as the container of packages. 
+      <br>
+      In this organization, all Java packages are created directly inside the 
+      project. This is the selected organization by default. The generated CLASS 
+      files are stored along with the JAVA source files.</li>
+    <li class=MsoNormal style='     '>Use source folders as the container for 
+      packages. <br>
+      In this project organization, packages are not created directly inside the 
+      project but in source folders. You create source folders as children of 
+      the project and create your packages inside these source folders. </li>
+  </ul>
+  <p class=para>The default organization for new projects can be changed on the 
+    preference pages (<b>Window</b> &gt; <b>Preferences</b> &gt; <b>Java &gt; 
+    New Project</b>).</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-13.htm">Creating a Java project as its own source
-container</a><br>
-<a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
-<a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-<a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
-<a href="..\tasks\tasks-11.htm">Creating Java elements</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+    container</a><br>
+    <a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
+    <a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
+    <a href="..\tasks\tasks-26.htm">Creating a new source folder</a><br>
+    <a href="..\tasks\tasks-11.htm">Creating Java elements</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
