--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-17.htm
@@ -5,82 +5,55 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a new Java class</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a new Java class</h1>
-
-<p class=para>Use the New Java Class wizard to create a new Java class. There
-are a number of ways to open this wizard:</p>
-
-<ol start=1 type=1>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l1 level1 lfo1;tab-stops:list .5in'>Select the container where
-     you want the new class to reside. </li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l1 level1 lfo1;tab-stops:list .5in'>Click the <span class=label><b>Create
-     a Java Class</b></span> button in the workbench toolbar. </li>
-</ol>
-
-<p>or</p>
-
-<ol start=1 type=1>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>Select the container where
-     you want the new class to reside.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>From the container's pop-up
-     menu, select <b>New</b> &gt; <b>Class</b>. </li>
-</ol>
-
-<p>or</p>
-
-<ol start=1 type=1>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l2 level1 lfo3;tab-stops:list .5in'>Select the container where
-     you want the new class to reside. </li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l2 level1 lfo3;tab-stops:list .5in'>From the drop-down menu on
-     the <span class=label><b>Open The New Wizard</b></span> button in the
-     workbench toolbar, select <b>Class</b>. </li>
-</ol>
-
-<p>or</p>
-
-<p class=MsoNormal>&nbsp;&nbsp;&nbsp; Click the <span class=label><b>Open The
-New Wizard</b></span> button. In the left pane, select <b>Java</b>, and in the
-right pane, select <b>Class</b>. </p>
-
-<p>or</p>
-
-<p>&nbsp;&nbsp;&nbsp; Select the container where you want the new package to
-reside. Then, select from the menu bar <b>File</b> &gt; <b>New</b> &gt; <b>Class</b>.
-</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a new Java class</h1>
+  <p class=para>Use the New Java Class wizard to create a new Java class. There 
+    are a number of ways to open this wizard:</p>
+  <ol start=1 type=1>
+    <li class=MsoNormal style='     '>Select the container where you want the 
+      new class to reside. </li>
+    <li class=MsoNormal style='     '>Click the <span class=label><b>Create a 
+      Java Class</b></span> button in the workbench toolbar. </li>
+  </ol>
+  <p>or</p>
+  <ol start=1 type=1>
+    <li class=MsoNormal style='     '>Select the container where you want the 
+      new class to reside.</li>
+    <li class=MsoNormal style='     '>From the container's pop-up menu, select 
+      <b>New</b> &gt; <b>Class</b>. </li>
+  </ol>
+  <p>or</p>
+  <ol start=1 type=1>
+    <li class=MsoNormal style='     '>Select the container where you want the 
+      new class to reside. </li>
+    <li class=MsoNormal style='     '>From the drop-down menu on the <span class=label><b>Open 
+      The New Wizard</b></span> button in the workbench toolbar, select <b>Class</b>. 
+    </li>
+  </ol>
+  <p>or</p>
+  <p class=MsoNormal>&nbsp;&nbsp;&nbsp; Click the <span class=label><b>Open The 
+    New Wizard</b></span> button. In the left pane, select <b>Java</b>, and in 
+    the right pane, select <b>Class</b>. </p>
+  <p>or</p>
+  <p>&nbsp;&nbsp;&nbsp; Select the container where you want the new package to 
+    reside. Then, select from the menu bar <b>File</b> &gt; <b>New</b> &gt; <b>Class</b>. 
+  </p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-18.htm">Creating a standalone class</a><br>
-<a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
-<a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation
-unit</a><br>
-<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-<a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
-<a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
-<a href="..\tasks\tasks-129.htm">Setting execution arguments</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-18.htm">Creating a standalone class</a><br>
+    <a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
+    <a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation 
+    unit</a><br>
+    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+    <a href="..\tasks\tasks-12.htm">Organizing Java projects</a><br>
+    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
+    <a href="..\tasks\tasks-129.htm">Setting execution arguments</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
