--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-20.htm
@@ -1,56 +1,39 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
+<html>
 <head>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a class in an existing compilation unit</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a new class in an existing compilation unit</h1>
-
-<p class=para>An alternative way to create a new class is to add it to an
-existing compilation unit. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the Package Explorer view, double-click a compilation unit
-to open it in an editor.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Type the code for the class at the desired position in the
-compilation unit.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor="#FFFFFF">
+<div class=Section1> 
+  <h1>Creating a new class in an existing compilation unit</h1>
+  <p class=para>An alternative way to create a new class is to add it to an existing 
+    compilation unit. </p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the Package Explorer view, double-click a compilation unit to open 
+    it in an editor.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Type the code for the class at the desired position in the compilation 
+    unit.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
-<a href="..\tasks\tasks-18.htm">Creating a standalone class</a><br>
-<a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
-<a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
-<a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
-<a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
-<a href="..\tasks\tasks-129.htm">Setting execution arguments</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-17.htm">Creating a new Java class</a><br>
+    <a href="..\tasks\tasks-18.htm">Creating a standalone class</a><br>
+    <a href="..\tasks\tasks-19.htm">Creating a nested class</a><br>
+    <a href="..\tasks\tasks-57.htm">Generating accessors</a><br>
+    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a><br>
+    <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
+    <a href="..\tasks\tasks-129.htm">Setting execution arguments</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
