--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
@@ -3,79 +3,53 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Creating a standalone interface</title>
+<title>Creating a top-level interface</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a top-level interface</h1>
-
-<p class=para>You can create interfaces that are not enclosed in other types. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Open the New Java Interface wizard. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Edit the <span class=label><b>Source Folder</b></span> field
-as needed to indicate in which folder you want the new interface to reside. You
-can either type a path or click the <span class=label><b>Browse</b></span>
-button to find the folder. If a folder is found for the current selection, that
-folder appears in the <span class=label><b>Source Folder</b></span> field as
-the container for the new interface.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Package</b></span> field, type or
-click <span class=label><b>Browse</b></span> to select the package where you
-want the new interface to reside. Leave this field empty to indicate that you
-want the new interface to be created in the default package.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Clear the <span class=label><b>Enclosing Type</b></span> check
-box. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Name</b></span> field, type a name
-for the new interface.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <b>public</b> or <b>default</b> access modifier
-using the <span class=label><b>Modifiers</b></span> radio buttons.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click the <span class=label><b>Add</b></span> button to add
-interfaces for the new interface to extend.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>Finish</b></span>.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a top-level interface</h1>
+  <p class=para>You can create interfaces that are not enclosed in other types. 
+  </p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Open the New Java Interface wizard. </p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Edit the <span class=label><b>Source Folder</b></span> field as needed 
+    to indicate in which folder you want the new interface to reside. You can 
+    either type a path or click the <span class=label><b>Browse</b></span> button 
+    to find the folder. If a folder is found for the current selection, that folder 
+    appears in the <span class=label><b>Source Folder</b></span> field as the 
+    container for the new interface.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Package</b></span> field, type or click 
+    <span class=label><b>Browse</b></span> to select the package where you want 
+    the new interface to reside. Leave this field empty to indicate that you want 
+    the new interface to be created in the default package.</p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Clear the <span class=label><b>Enclosing Type</b></span> check box. 
+  </p>
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Name</b></span> field, type a name for 
+    the new interface.</p>
+  <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <b>public</b> or <b>default</b> access modifier using the 
+    <span class=label><b>Modifiers</b></span> radio buttons.</p>
+  <p class=para> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click the <span class=label><b>Add</b></span> button to add interfaces 
+    for the new interface to extend.</p>
+  <p class=para> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>Finish</b></span>.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="tasks-22.htm">Opening the New Interface wizard</a><br>
-<a href="..\tasks\tasks-24.htm">Creating a nested interface</a><br>
-<a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation unit</a><br>
-<a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a>&nbsp;</p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="tasks-22.htm">Opening the New Interface wizard</a><br>
+    <a href="..\tasks\tasks-24.htm">Creating a nested interface</a><br>
+    <a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation 
+    unit</a><br>
+    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a>&nbsp;</p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
