--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
@@ -5,86 +5,55 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a nested interface</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a nested interface</h1>
-
-<p class=para>You can create interfaces that are enclosed in other types (that
-is, nested interfaces). </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Open the New Java Interface wizard.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Edit the <span class=label><b>Source Folder</b></span> field
-to indicate in which folder you want the new interface to reside. You can
-either type a path or click the <span class=label><b>Browse</b></span> button
-to find the folder. If a folder is found for the current selection, that folder
-appears in the <b>Source <span class=label>Folder</span></b> field as the
-container for the new interface.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <span class=label><b>Enclosing Type</b></span>
-check box. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Enclosing Type</b></span> field,
-type the name of the enclosing type or click the <span class=label><b>Browse</b></span>
-button to select the enclosing type for the new interface.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Name</b></span> field, type a name
-for the new interface.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <b>public</b> or <b>default</b> access modifier by
-using the <span class=label><b>Modifiers</b></span> radio buttons.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <span class=label><b>static</b></span> check box if
-you want the new interface to be static.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click the <span class=label><b>Add</b></span> button to add
-interfaces for the new interface to extend.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>Finish</b></span> when you are
-done.</p>
-
-<p class=para><b>Note</b>: The new interface is created in the same compilation
-unit as its enclosing type.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a nested interface</h1>
+  <p class=para>You can create interfaces that are enclosed in other types (that 
+    is, nested interfaces). </p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Open the New Java Interface wizard.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Edit the <span class=label><b>Source Folder</b></span> field to indicate 
+    in which folder you want the new interface to reside. You can either type 
+    a path or click the <span class=label><b>Browse</b></span> button to find 
+    the folder. If a folder is found for the current selection, that folder appears 
+    in the <b>Source <span class=label>Folder</span></b> field as the container 
+    for the new interface.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <span class=label><b>Enclosing Type</b></span> check box. 
+  </p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Enclosing Type</b></span> field, type 
+    the name of the enclosing type or click the <span class=label><b>Browse</b></span> 
+    button to select the enclosing type for the new interface.</p>
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Name</b></span> field, type a name for 
+    the new interface.</p>
+  <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <b>public</b> or <b>default</b> access modifier by using 
+    the <span class=label><b>Modifiers</b></span> radio buttons.</p>
+  <p class=para> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <span class=label><b>static</b></span> check box if you 
+    want the new interface to be static.</p>
+  <p class=para> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click the <span class=label><b>Add</b></span> button to add interfaces 
+    for the new interface to extend.</p>
+  <p class=para> 9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>Finish</b></span> when you are done.</p>
+  <p class=para><b>Note</b>: The new interface is created in the same compilation 
+    unit as its enclosing type.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="tasks-22.htm">Opening the New Interface wizard</a><br>
-<a href="..\tasks\tasks-23.htm">Creating a standalone interface</a><br>
-<a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation unit</a><br>
-<a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="tasks-22.htm">Opening the New Interface wizard</a><br>
+    <a href="..\tasks\tasks-23.htm">Creating a standalone interface</a><br>
+    <a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation 
+    unit</a><br>
+    <a href="..\tasks\tasks-94.htm">Renaming a class, field, or interface</a></p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
