--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -5,72 +5,45 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a new source folder</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a new source folder</h1>
-
-<p class=para>In a project that uses source folders, you can create a new
-folder to contain Java source code.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the Package Explorer view, select the project where you want the
-new source folder to reside. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the project's pop-up menu, select <b>New</b> &gt; <b>Source
-Folder</b>.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Project Name</b></span> field, the
-name of the selected project appears. If you need to edit this field, you can
-either type a path or click <span class=label><b>Browse</b></span> to choose a
-project that uses source folders.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Folder Name</b></span> field, type
-a name for the new source folder.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>Finish</b></span> when you are
-done.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a new source folder</h1>
+  <p class=para>In a project that uses source folders, you can create a new folder 
+    to contain Java source code.</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the Package Explorer view, select the project where you want the 
+    new source folder to reside. </p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the project's pop-up menu, select <b>New</b> &gt; <b>Source Folder</b>.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Project Name</b></span> field, the name 
+    of the selected project appears. If you need to edit this field, you can either 
+    type a path or click <span class=label><b>Browse</b></span> to choose a project 
+    that uses source folders.</p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Folder Name</b></span> field, type a name 
+    for the new source folder.</p>
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>Finish</b></span> when you are done.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
-<a href="..\tasks\tasks-13.htm">Creating a Java project as its own source
-container</a><br>
-<a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
-<a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation unit</a><br>
-<a href="..\tasks\tasks-149.htm">Creating a Java scrapbook page</a><br>
-<a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
-<a href="..\tasks\tasks-12.htm">Organizing Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
+    <a href="..\tasks\tasks-13.htm">Creating a Java project as its own source 
+    container</a><br>
+    <a href="..\tasks\tasks-14.htm">Creating a Java project with source folders</a><br>
+    <a href="..\tasks\tasks-25.htm">Creating a new interface in a compilation 
+    unit</a><br>
+    <a href="..\tasks\tasks-149.htm">Creating a Java scrapbook page</a><br>
+    <a href="..\tasks\tasks-11.htm">Creating Java elements</a><br>
+    <a href="..\tasks\tasks-12.htm">Organizing Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
