--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -5,103 +5,68 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Creating a new JAR file</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Creating a new JAR file</h1>
-
-<p class=para>To create a new JAR file in the workbench:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the Package Explorer view, you can optionally select one or
-more Java elements to export.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the menu bar, select <b>File</b> &gt; <b>Export</b>.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select <b>JAR file</b>, then click <span class=label><b>Next</b></span>.
-</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the resources that you want to export in the<span
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Creating a new JAR file</h1>
+  <p class=para>To create a new JAR file in the workbench:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the Package Explorer view, you can optionally select one or more 
+    Java elements to export.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the menu bar, select <b>File</b> &gt; <b>Export</b>.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select <b>JAR file</b>, then click <span class=label><b>Next</b></span>. 
+  </p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the resources that you want to export in the<span
 class=label> <b>Select the resources to export </b></span>field </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the appropriate check box to specify whether you want
-to <b>Export generated class files and resources</b> or <b>Export Java source
-files and resources</b>.<br>
-<b>Note</b>: Selected resources are exported in both cases.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the <span class=label><b>Select the export destination</b></span>
-field, either type or click <span class=label><b>Browse</b></span> to select a
-location for the JAR file.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select or clear the <span class=label><b>Compress the contents
-of the JAR file</b></span> check box.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select or clear the <span class=label><b>Overwrite existing
-files without warning </b>check box. If you clear this<b> </b>check box, </span>then
-you will be prompted to confirm the replacement of each file that will be
-overwritten.<br>
-<b>Note</b>: The overwrite option is applied when writing the JAR file, the JAR
-description, and the manifest file.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>You have two options: </p>
-
-<ol start=9 type=1>
- <ul type=circle>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Click <span
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the appropriate check box to specify whether you want to <b>Export 
+    generated class files and resources</b> or <b>Export Java source files and 
+    resources</b>.<br>
+    <b>Note</b>: Selected resources are exported in both cases.</p>
+  <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the <span class=label><b>Select the export destination</b></span> 
+    field, either type or click <span class=label><b>Browse</b></span> to select 
+    a location for the JAR file.</p>
+  <p class=para> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select or clear the <span class=label><b>Compress the contents of 
+    the JAR file</b></span> check box.</p>
+  <p class=para> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select or clear the <span class=label><b>Overwrite existing files 
+    without warning </b>check box. If you clear this<b> </b>check box, </span>then 
+    you will be prompted to confirm the replacement of each file that will be 
+    overwritten.<br>
+    <b>Note</b>: The overwrite option is applied when writing the JAR file, the 
+    JAR description, and the manifest file.</p>
+  <p class=para> 9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> You have two options: </p>
+  <ol start=9 type=1>
+    <ul type=circle>
+      <li class=MsoNormal>Click <span
       class=label><b>Finish</b></span> to create the JAR file immediately. </li>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Click <span
-      class=label><b>Next</b></span> to use the JAR Packaging Options page to
-      set advanced options, create a JAR description, or change the default
-      manifest.</li>
- </ul>
-</ol>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+      <li class=MsoNormal>Click <span
+      class=label><b>Next</b></span> to use the JAR Packaging Options page to 
+        set advanced options, create a JAR description, or change the default 
+        manifest.</li>
+    </ul>
+  </ol>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-113.htm">Adding a JAR file to the build path</a><br>
-<a href="..\tasks\tasks-115.htm">Attaching source to a JAR file</a><br>
-<a href="tasks-36a.htm">Creating a JAR description</a><br>
-<a href="tasks-35.htm">Defining the JAR file's manifest</a><br>
-<a href="..\tasks\tasks-36b.htm">Editing a JAR description</a><br>
-<a href="..\tasks\tasks-34.htm">Setting advanced options</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-113.htm">Adding a JAR file to the build path</a><br>
+    <a href="..\tasks\tasks-115.htm">Attaching source to a JAR file</a><br>
+    <a href="tasks-36a.htm">Creating a JAR description</a><br>
+    <a href="tasks-35.htm">Defining the JAR file's manifest</a><br>
+    <a href="..\tasks\tasks-36b.htm">Editing a JAR description</a><br>
+    <a href="..\tasks\tasks-34.htm">Setting advanced options</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
