--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-34.htm
@@ -5,67 +5,45 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Setting advanced options</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Setting advanced options</h1>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Follow the procedure for creating a JAR file, but click <span
-class=label><b>Next</b></span> in the last step to go to the JAR Packaging
-Options page.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>If you want to save the JAR file description, select the <span
-class=label><b>Save the description of this JAR in the workspace</b></span>
-check box.</p>
-
-<p class=head style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Choose whether warnings and errors or both should be presented
-in a dialog after JAR creation. It might be useful to disable these options if
-a JAR description is created and you want to recreate one or more JAR files
-without having to read error dialogs. The compiler is able to generate CLASS
-files even when source contains errors. You have the option to exclude CLASS
-(but not source) files with compile errors. These files will be reported at the
-end, if reporting is enabled.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>You can choose to exclude CLASS (but not source) files that
-have compile warnings. These files will be reported at the end, if reporting is
-enabled.<br>
-<b>Note</b>: This option does not automatically exclude class files with
-compile errors.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>Finish</b></span> to create the JAR
-file immediately or <span class=label><b>Next</b></span> if you want to change
-the default manifest.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Setting advanced options</h1>
+  <p class=head> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Follow the procedure for creating a JAR file, but click <span
+class=label><b>Next</b></span> in the last step to go to the JAR Packaging Options 
+    page.</p>
+  <p class=head> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> If you want to save the JAR file description, select the <span
+class=label><b>Save the description of this JAR in the workspace</b></span> check 
+    box.</p>
+  <p class=head> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Choose whether warnings and errors or both should be presented in 
+    a dialog after JAR creation. It might be useful to disable these options if 
+    a JAR description is created and you want to recreate one or more JAR files 
+    without having to read error dialogs. The compiler is able to generate CLASS 
+    files even when source contains errors. You have the option to exclude CLASS 
+    (but not source) files with compile errors. These files will be reported at 
+    the end, if reporting is enabled.</p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> You can choose to exclude CLASS (but not source) files that have compile 
+    warnings. These files will be reported at the end, if reporting is enabled.<br>
+    <b>Note</b>: This option does not automatically exclude class files with compile 
+    errors.</p>
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>Finish</b></span> to create the JAR file 
+    immediately or <span class=label><b>Next</b></span> if you want to change 
+    the default manifest.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-33.htm">Creating a new JAR file</a><br>
-<a href="..\tasks\tasks-35.htm">Defining the JAR file's manifest</a><br>
-<a href="tasks-36a.htm">Creating a JAR description</a><br>
-&nbsp;</p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-33.htm">Creating a new JAR file</a><br>
+    <a href="..\tasks\tasks-35.htm">Defining the JAR file's manifest</a><br>
+    <a href="tasks-36a.htm">Creating a JAR description</a><br>
+    &nbsp;</p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
