--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-35.htm
@@ -5,113 +5,77 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Defining the JAR File's Manifest</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Defining the JAR file's manifest</h1>
-
-<p class=para>You can either define the important parts of the JAR file manifest
-directly in the wizard or choose to use a manifest file that already exists in
-your workbench.</p>
-
-<h2>Creating a new manifest</h2>
-
-<ol start=1 type=1>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l1 level1 lfo1;tab-stops:list .5in'>Follow the procedure for
-     creating a JAR file, but click <span class=label><b>Next</b></span> in the
-     last step to go to the JAR Packaging Options page.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l1 level1 lfo1;tab-stops:list .5in'>Set any advanced options that
-     you want to set, and then click <span class=label><b>Next</b></span> again
-     to go to the JAR Manifest Specification page.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l1 level1 lfo1;tab-stops:list .5in'>If it is not already
-     selected, click the <span class=label><b>Generate the manifest file</b></span>
-     button.</li>
-</ol>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>You can now choose to save the manifest in the workbench. This
-will save the manifest for later use. Click <span class=label>Save the manifest
-in the workspace</span>, then click <span class=label><b>Browse</b></span> next
-to the <span class=label><b>Manifest file</b></span> field to specify a path
-and file name for the manifest.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>If you decided to save the manifest file in the previous step
-and you chose to save the JAR description on the previous wizard page, then you
-can choose to reuse it in the JAR description (by selecting the <b>Reuse and
-save the manifest in the workspace </b>checkbox). This means that the saved
-file will be used when the JAR file is recreated from the JAR description.This
-option is useful if you want to modify or replace the manifest file before
-recreating the JAR file from the description.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>You can choose to seal the JAR and eventually exclude some
-packages from being sealed or specify a list with sealed packages. By default,
-nothing is sealed. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click the <span class=label><b>Browse</b></span> button next
-to the <span class=label><b>Main-Class</b></span> field to specify the entry
-point for your applications.<br>
-<b>Note</b>: If your class is not in the list, then you forgot to select it at
-the beginning.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Click <span class=label><b>Finish</b></span>. This will create
-the JAR, and optionally a JAR description and a manifest file.</p>
-
-<h2>Using an existing manifest</h2>
-
-<p>You can use an existing manifest file that already exists in your workbench.</p>
-
-<ol start=1 type=1>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>Follow the procedure for
-     creating a JAR file, but click <span class=label><b>Next</b></span> in the
-     last step to go to the JAR Packaging Options page.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>Set any advanced options that
-     you want to set, and the click <span class=label><b>Next</b></span> again
-     to go to the JAR Manifest Specification page.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>Click the <span class=label><b>Use
-     existing manifest from workspace </b>radio </span>button.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>Click the <span class=label><b>Browse</b></span>
-     button to choose a manifest file from the workbench.</li>
- <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:auto;
-     mso-list:l0 level1 lfo2;tab-stops:list .5in'>Click <span class=label><b>Finish</b></span>.
-     This will create the JAR and optionally a JAR description.</li>
-</ol>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Defining the JAR file's manifest</h1>
+  <p class=para>You can either define the important parts of the JAR file manifest 
+    directly in the wizard or choose to use a manifest file that already exists 
+    in your workbench.</p>
+  <h2>Creating a new manifest</h2>
+  <ol start=1 type=1>
+    <li class=MsoNormal style='     '>Follow the procedure for creating a JAR 
+      file, but click <span class=label><b>Next</b></span> in the last step to 
+      go to the JAR Packaging Options page.</li>
+    <li class=MsoNormal style='     '>Set any advanced options that you want to 
+      set, and then click <span class=label><b>Next</b></span> again to go to 
+      the JAR Manifest Specification page.</li>
+    <li class=MsoNormal style='     '>If it is not already selected, click the 
+      <span class=label><b>Generate the manifest file</b></span> button.</li>
+  </ol>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> You can now choose to save the manifest in the workbench. This will 
+    save the manifest for later use. Click <span class=label>Save the manifest 
+    in the workspace</span>, then click <span class=label><b>Browse</b></span> 
+    next to the <span class=label><b>Manifest file</b></span> field to specify 
+    a path and file name for the manifest.</p>
+  <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> If you decided to save the manifest file in the previous step and 
+    you chose to save the JAR description on the previous wizard page, then you 
+    can choose to reuse it in the JAR description (by selecting the <b>Reuse and 
+    save the manifest in the workspace </b>checkbox). This means that the saved 
+    file will be used when the JAR file is recreated from the JAR description.This 
+    option is useful if you want to modify or replace the manifest file before 
+    recreating the JAR file from the description.</p>
+  <p class=para> 6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> You can choose to seal the JAR and eventually exclude some packages 
+    from being sealed or specify a list with sealed packages. By default, nothing 
+    is sealed. </p>
+  <p class=para> 7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click the <span class=label><b>Browse</b></span> button next to the 
+    <span class=label><b>Main-Class</b></span> field to specify the entry point 
+    for your applications.<br>
+    <b>Note</b>: If your class is not in the list, then you forgot to select it 
+    at the beginning.</p>
+  <p class=para> 8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Click <span class=label><b>Finish</b></span>. This will create the 
+    JAR, and optionally a JAR description and a manifest file.</p>
+  <h2>Using an existing manifest</h2>
+  <p>You can use an existing manifest file that already exists in your workbench.</p>
+  <ol start=1 type=1>
+    <li class=MsoNormal style='     '>Follow the procedure for creating a JAR 
+      file, but click <span class=label><b>Next</b></span> in the last step to 
+      go to the JAR Packaging Options page.</li>
+    <li class=MsoNormal style='     '>Set any advanced options that you want to 
+      set, and the click <span class=label><b>Next</b></span> again to go to the 
+      JAR Manifest Specification page.</li>
+    <li class=MsoNormal style='     '>Click the <span class=label><b>Use existing 
+      manifest from workspace </b>radio </span>button.</li>
+    <li class=MsoNormal style='     '>Click the <span class=label><b>Browse</b></span> 
+      button to choose a manifest file from the workbench.</li>
+    <li class=MsoNormal style='     '>Click <span class=label><b>Finish</b></span>. 
+      This will create the JAR and optionally a JAR description.</li>
+  </ol>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-33.htm">Creating a new JAR file</a><br>
-<a href="..\tasks\tasks-36a.htm">Creating a JAR description</a><br>
-<a href="..\tasks\tasks-36b.htm">Editing a JAR description</a><br>
-<a href="tasks-34.htm">Setting advanced options</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-33.htm">Creating a new JAR file</a><br>
+    <a href="..\tasks\tasks-36a.htm">Creating a JAR description</a><br>
+    <a href="..\tasks\tasks-36b.htm">Editing a JAR description</a><br>
+    <a href="tasks-34.htm">Setting advanced options</a></p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
