--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -5,52 +5,31 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Showing and hiding inner types</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Showing and hiding CLASS files generated for inner types</h1>
-
-<p class=para>To show CLASS files for inner types:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <span class=label><b>Filters</b></span> command
-from the Package Explorer view drop-down menu. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Ensure that the <span class=filename><b>Hide anonymous inner
-class files</b></span>&nbsp;filter is not selected.</p>
-
-<p class=para>To hide CLASS files for inner types:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <span class=label><b>Filters</b></span> command
-from the Package Explorer view drop-down menu.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo2;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Ensure that the <span class=filename>&nbsp;<b>Hide anonymous
-inner class files</b></span>&nbsp;filter is selected.</p>
-
-<p class=para><img width=159 height=27 id="_x0000_i1025"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Showing and hiding CLASS files generated for inner types</h1>
+  <p class=para>To show CLASS files for inner types:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <span class=label><b>Filters</b></span> command from the 
+    Package Explorer view drop-down menu. </p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Ensure that the <span class=filename><b>Hide anonymous inner class 
+    files</b></span>&nbsp;filter is not selected.</p>
+  <p class=para>To hide CLASS files for inner types:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <span class=label><b>Filters</b></span> command from the 
+    Package Explorer view drop-down menu.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Ensure that the <span class=filename>&nbsp;<b>Hide anonymous inner 
+    class files</b></span>&nbsp;filter is selected.</p>
+  <p class=para><img width=159 height=27 id="_x0000_i1025"
 src="..\images\ngrelt.gif" alt="Related tasks" border=0></p>
-
-<p class=para><a href="tasks-2.htm">Showing and hiding files</a></p>
-
-<p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p class=para><a href="tasks-2.htm">Showing and hiding files</a></p>
+  <p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p class=para><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p class=para><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
