--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
@@ -5,51 +5,33 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening a type hierarchy in its own perspective</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Opening a type hierarchy in its own perspective</h1>
-
-<p class=para>The default behavior for opening a type hierarchy view is to
-replace the Hierarchy view that is already open in the perspective, if one if
-already open. If there is not already an open Hierarchy view, one is opened
-automatically. </p>
-
-<p class=para>Sometimes, it is useful to look at or work with several type
-hierarchies in different perspectives. This can be achieved by changing a
-workbench preference.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the menu bar, select <b>Window</b> &gt; <b>Preferences</b>
-and select the <b>Java</b> category. The general Java Preferences page opens.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <b>Open a New Type Hierarchy Perspective</b> button
-in the <b>When Opening a Type Hierarchy</b> category.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Opening a type hierarchy in its own perspective</h1>
+  <p class=para>The default behavior for opening a type hierarchy view is to replace 
+    the Hierarchy view that is already open in the perspective, if one if already 
+    open. If there is not already an open Hierarchy view, one is opened automatically. 
+  </p>
+  <p class=para>Sometimes, it is useful to look at or work with several type hierarchies 
+    in different perspectives. This can be achieved by changing a workbench preference.</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the menu bar, select <b>Window</b> &gt; <b>Preferences</b> and 
+    select the <b>Java</b> category. The general Java Preferences page opens.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <b>Open a New Type Hierarchy Perspective</b> button in 
+    the <b>When Opening a Type Hierarchy</b> category.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-5.htm">Java perspectives</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-5.htm">Java perspectives</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-7.htm">Changing new type hierarchy defaults</a><br>
-<a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
-<a href="..\tasks\tasks-40.htm">Opening a type hierarchy on the current text
-selection</a><br>
-<a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\tasks\tasks-7.htm">Changing new type hierarchy defaults</a><br>
+    <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+    <a href="..\tasks\tasks-40.htm">Opening a type hierarchy on the current text 
+    selection</a><br>
+    <a href="..\tasks\tasks-41.htm">Opening a type hierarchy in the workbench</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
