--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -5,58 +5,39 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Overriding a method</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Overriding a method using the Hierarchy view</h1>
-
-<p class=para>You can use the Hierarchy view to override a method:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Open the type hierarchy for the type in which you want to add the
-overridding method.<br>
-<b>Note:</b> It does not matter whether the subtypes, supertypes, or type
-hierarchy is displayed.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the list pane of the Hierarchy view, ensure that the <span
-class=label><b>Show All Inherited Members</b></span> button is toggled on in
-order to see all the inherited members.<br>
-<b>Note:</b> The selection might not show all members if a filter (such as <b>Hide
-Fields</b> or <b>Hide Static Members</b>) is active.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>From the pop-up menu of one of the inherited methods, select <span
-class=label><b>Override in <i>class name</i></b></span> (where <i>class name</i>
-is the name of the class in which the method will be created).</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Overriding a method using the Hierarchy view</h1>
+  <p class=para>You can use the Hierarchy view to override a method:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Open the type hierarchy for the type in which you want to add the 
+    overridding method.<br>
+    <b>Note:</b> It does not matter whether the subtypes, supertypes, or type 
+    hierarchy is displayed.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the list pane of the Hierarchy view, ensure that the <span
+class=label><b>Show All Inherited Members</b></span> button is toggled on in order 
+    to see all the inherited members.<br>
+    <b>Note:</b> The selection might not show all members if a filter (such as 
+    <b>Hide Fields</b> or <b>Hide Static Members</b>) is active.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> From the pop-up menu of one of the inherited methods, select <span
+class=label><b>Override in <i>class name</i></b></span> (where <i>class name</i> 
+    is the name of the class in which the method will be created).</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-1.htm">Java development tools (JDT)</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-87.htm">Extracting a method</a><br>
-<a href="..\tasks\tasks-44.htm">Finding overridden methods</a><br>
-<a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
-<a href="..\tasks\tasks-96.htm">Renaming a method</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-87.htm">Extracting a method</a><br>
+    <a href="..\tasks\tasks-44.htm">Finding overridden methods</a><br>
+    <a href="tasks-39.htm">Opening a type hierarchy on a Java element</a><br>
+    <a href="..\tasks\tasks-96.htm">Renaming a method</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"><br>
-<a href="..\reference\rinmeth.htm">Inherited methods</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+    <a href="..\reference\rinmeth.htm">Inherited methods</a></p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
