--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -5,60 +5,36 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Filtering elements</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Filtering elements</h1>
-
-<p class=para>To filter elements:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>On the Package Explorer view toolbar, click the <b>Menu</b>
-button and choose <b>Filters</b>.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select or clear the filters that you want to apply to the view
-(read <b>Filter Description </b>to learn about the selected filter&#8217;s functionality).</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l1 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Optionally, you can select patterns for filtering the view. To
-do so:</p>
-
-<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo1;
-tab-stops:list 1.0in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the <b>Name filter patterns</b> checkbox at the top of
-the dialog</p>
-
-<p class=para style='margin-left:1.0in;text-indent:-.25in;mso-list:l1 level2 lfo1;
-tab-stops:list 1.0in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the text field below, specify the desired patterns (names
-matching one of the patterns will be hidden).</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Filtering elements</h1>
+  <p class=para>To filter elements:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> On the Package Explorer view toolbar, click the <b>Menu</b> button 
+    and choose <b>Filters</b>.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select or clear the filters that you want to apply to the view (read 
+    <b>Filter Description </b>to learn about the selected filter&#8217;s functionality).</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Optionally, you can select patterns for filtering the view. To do 
+    so:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the <b>Name filter patterns</b> checkbox at the top of the 
+    dialog</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the text field below, specify the desired patterns (names matching 
+    one of the patterns will be hidden).</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-3.htm">Showing and hiding system files</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-3.htm">Showing and hiding system files</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
