--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-57.htm
@@ -5,59 +5,37 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Generating accessors</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Generating accessors</h1>
-
-<p class=para>The Java editor allows you to generate accessors (&quot;getters
-and setters&quot;) for the fields of a type inside a compilation unit.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>In the editor, select the field for which you want to generate
-accessors (or a type in which you want to create these methods).</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select <b>Generate Getter and Setter</b> from the <b>Source</b>
-pop-up menu. </p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>A dialog will open to let you select<span style="mso-spacerun:
-yes">&nbsp; </span>which methods you want to created.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select the methods and press OK.</p>
-
-<p class=para><img width=159 height=27 id="_x0000_i1025"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Generating accessors</h1>
+  <p class=para>The Java editor allows you to generate accessors (&quot;getters 
+    and setters&quot;) for the fields of a type inside a compilation unit.</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> In the editor, select the field for which you want to generate accessors 
+    (or a type in which you want to create these methods).</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select <b>Generate Getter and Setter</b> from the <b>Source</b> pop-up 
+    menu. </p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> A dialog will open to let you select&nbsp; which methods you want 
+    to created.</p>
+  <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select the methods and press OK.</p>
+  <p class=para><img width=159 height=27 id="_x0000_i1025"
 src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-7.htm">Java editor</a><br>
-<a href="..\concepts\concepts-3.htm">Java projects</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-7.htm">Java editor</a><br>
+    <a href="..\concepts\concepts-3.htm">Java projects</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
-<a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation
-unit</a><br>
-&nbsp;</p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-54.htm">Using the Java editor</a><br>
+    <a href="..\tasks\tasks-20.htm">Creating a class in an existing compilation 
+    unit</a><br>
+    &nbsp;</p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-102.htm">Outline view for Java</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-102.htm">Outline view for Java</a></p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
