--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-60.htm
@@ -5,64 +5,42 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Organizing existing import statements</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Organizing existing import statements</h1>
-
-<p class=para>The Java editor can help you improve the existing import
-statements inside a compilation unit.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Do one of the following while editing your Java code:</p>
-
-<ol start=1 type=1>
- <ul type=circle>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select <b>Source &gt; <span
-      class=label>Organize Imports</span></b> from the pop-up menu in the
-      editor </li>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Select <b>Source </b>&gt;
-      <b>Organize Imports</b> from the menu bar</li>
-  <li class=MsoNormal style='mso-margin-top-alt:auto;mso-margin-bottom-alt:
-      auto;mso-list:l0 level2 lfo1;tab-stops:list 1.0in'>Press <b>Ctrl</b>+<b>Shift</b>+<b>O</b></li>
- </ul>
-</ol>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>The Java editor generates a complete list of import
-statements, as specified by the import order preference, and new import
-statements replace the old ones.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Organizing existing import statements</h1>
+  <p class=para>The Java editor can help you improve the existing import statements 
+    inside a compilation unit.</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Do one of the following while editing your Java code:</p>
+  <ol start=1 type=1>
+    <ul type=circle>
+      <li class=MsoNormal>Select <b>Source &gt; <span
+      class=label>Organize Imports</span></b> from the pop-up menu in the editor 
+      </li>
+      <li class=MsoNormal>Select <b>Source </b>&gt; <b>Organize Imports</b> from 
+        the menu bar</li>
+      <li class=MsoNormal>Press <b>Ctrl</b>+<b>Shift</b>+<b>O</b></li>
+    </ul>
+  </ol>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> The Java editor generates a complete list of import statements, as 
+    specified by the import order preference, and new import statements replace 
+    the old ones.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-7.htm">Java editor</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
-<a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
-<a href="..\tasks\tasks-61.htm">Setting the order of import statements</a><br>
-<a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the
-Package Explorer view</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-59.htm">Adding required import statements</a><br>
+    <a href="..\tasks\tasks-58.htm">Managing import statements</a><br>
+    <a href="..\tasks\tasks-61.htm">Setting the order of import statements</a><br>
+    <a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the Package 
+    Explorer view</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
-
-<p><br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-116.htm">Refactoring actions</a></p>
+  <p><br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
