--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
@@ -5,56 +5,36 @@
 <LINK REL="STYLESHEET" HREF="../../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <title>Opening a package</title>
 </head>
-
-<body bgcolor=white lang=EN-US link=blue vlink=blue style='tab-interval:.5in'>
-
-<div class=Section1>
-
-<h1>Opening a package </h1>
-
-<p class=para>To reveal a package in the tree of the Package Explorer view:</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select <b>Navigate</b> &gt; <b>Go To &gt; Package</b> from the
-menu bar. The Go To Package dialog opens.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Type a package name in the <span class=label><b>Choose a
-package</b></span> field to narrow the list of available packages, using
-wildcards as needed. As you type, the list is filtered to display only packages
-that match the current expression.</p>
-
-<p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
-tab-stops:list .5in'><![if !supportLists]>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><![endif]>Select a package from the list, then click <span class=label><b>OK</b></span>.
-The selected package is displayed in the Package Explorer view.</p>
-
-<p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
+<body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
+<div class=Section1> 
+  <h1>Opening a package </h1>
+  <p class=para>To reveal a package in the tree of the Package Explorer view:</p>
+  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select <b>Navigate</b> &gt; <b>Go To &gt; Package</b> from the menu 
+    bar. The Go To Package dialog opens.</p>
+  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Type a package name in the <span class=label><b>Choose a package</b></span> 
+    field to narrow the list of available packages, using wildcards as needed. 
+    As you type, the list is filtered to display only packages that match the 
+    current expression.</p>
+  <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    </span> Select a package from the list, then click <span class=label><b>OK</b></span>. 
+    The selected package is displayed in the Package Explorer view.</p>
+  <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
 alt="Related concepts" border=0></p>
-
-<p><a href="..\concepts\concepts-6.htm">Java views</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1026"
+  <p><a href="..\concepts\concepts-6.htm">Java views</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
-
-<p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the
-Package Explorer view</a><br>
-<a href="..\tasks\tasks-90.htm">Renaming a package</a><br>
-<a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a><br>
-<a href="..\tasks\tasks-15.htm">Creating a new Java package</a></p>
-
-<p><img border=0 width=159 height=27 id="_x0000_i1027"
+  <p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the 
+    Package Explorer view</a><br>
+    <a href="..\tasks\tasks-90.htm">Renaming a package</a><br>
+    <a href="..\tasks\tasks-51.htm">Moving folders, packages, and files</a><br>
+    <a href="..\tasks\tasks-15.htm">Creating a new Java package</a></p>
+  <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
-
-<p>&nbsp;<br>
-<img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
-
+  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p>&nbsp;<br>
+    <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
-
 </body>
-
 </html>
